Numerous adjustments for tablet and 7" builds

--- a/tex/p054.tex
+++ b/tex/p054.tex
@@ -59,7 +59,7 @@
 \vs p054 6:3 \pc If an affectionate father of a large family chooses to show mercy to one of his children guilty of grievous wrongdoing, it may well be that the extension of mercy to this misbehaving child will work a temporary hardship upon all the other and well\hyp{}behaved children. Such eventualities are inevitable; such a risk is inseparable from the reality situation of having a loving parent and of being a member of a family group. Each member of a family profits by the righteous conduct of every other member; likewise must each member suffer the immediate time\hyp{}consequences of the misconduct of every other member. Families, groups, nations, races, worlds, systems, constellations, and universes are relationships of association which possess individuality; and therefore does every member of any such group, large or small, reap the benefits and suffer the consequences of the rightdoing and the wrongdoing of all other members of the group concerned.
 \vs p054 6:4 But one thing should be made clear: If you are made to suffer the evil consequences of the sin of some member of your family, some fellow citizen or fellow mortal, even rebellion in the system or elsewhere --- no matter what you may have to endure because of the wrongdoing of your associates, fellows, or superiors --- you may rest secure in the eternal assurance that such tribulations are transient afflictions. None of these fraternal consequences of misbehaviour in the group can ever jeopardize your eternal prospects or in the least degree deprive you of your divine right of Paradise ascension and God attainment.
 \vs p054 6:5 And there is compensation for these trials, delays, and disappointments which invariably accompany the sin of rebellion. Of the many valuable repercussions of the Lucifer rebellion which might be named, I will only call attention to the enhanced careers of those mortal ascenders, the Jerusem citizens, who, by withstanding the sophistries of sin, placed themselves in line for becoming future Mighty Messengers, fellows of my own order. Every being who stood the test of that evil episode thereby immediately advanced his administrative status and enhanced his spiritual worth.
-\vs p054 6:6 \pc At first the Lucifer upheaval appeared to be an unmitigated calamity to the system and to the universe. Gradually benefits began to accrue. With the passing of 25,000 years of system time (20,000 years of Urantia time), the Melchizedeks began to teach that the good resulting from Lucifer’s folly had come to equal the evil incurred. The sum of evil had by that time become almost stationary, continuing to increase only on certain isolated worlds, while the beneficial repercussions continued to multiply and extend out through the universe and superuniverse, even to Havona. The Melchizedeks now teach that the good resulting from the Satania rebellion is more than 1,000 times the sum of all the evil.
+\vs p054 6:6 \pc At first the Lucifer upheaval appeared to be an unmitigated calamity to the system and to the universe. Gradually benefits began to accrue. With the passing of 25,000 years of system time (20,000 years of Urantia time), the Melchizedeks began to teach that the good resulting from Lucifer’s folly had come to equal the evil incurred. The sum of evil had by that time become almost stationary, continuing to increase only on certain isolated worlds, while the beneficial repercussions continued to multiply and extend out through the universe and superuniverse, even to Havona. The Melchizedeks now teach that the good resulting from the Satania rebellion is more than a thousand times the sum of all the evil.
 \vs p054 6:7 But such an extraordinary and beneficent harvest of wrongdoing could only be brought about by the wise, divine, and merciful attitude of all of Lucifer’s superiors, extending from the Constellation Fathers on Edentia to the Universal Father on Paradise. The passing of time has enhanced the consequential good to be derived from the Lucifer folly; and since the evil to be penalized was quite fully developed within a comparatively short time, it is apparent that the all\hyp{}wise and farseeing universe rulers would be certain to extend the time in which to reap increasingly beneficial results. Regardless of the many additional reasons for delaying the apprehension and adjudication of the Satania rebels, this one gain would have been enough to explain why these sinners were not sooner interned, and why they have not been adjudicated and destroyed.
 \vs p054 6:8 Short\hyp{}sighted and time\hyp{}bound mortal minds should be slow to criticize the time delays of the farseeing and all\hyp{}wise administrators of universe affairs.
 \vs p054 6:9 One error of human thinking respecting these problems consists in the idea that all evolutionary mortals on an evolving planet would choose to enter upon the Paradise career if sin had not cursed their world. The ability to decline survival does not date from the times of the Lucifer rebellion. Mortal man has always possessed the endowment of freewill choice regarding the Paradise career.
