--- a/tex/p129.tex
+++ b/tex/p129.tex
@@ -10,7 +10,7 @@
 \usection{The Twenty\hyp{}Seventh Year (A.D.\,21)}
 \vs p129 1:1 In January of this year, A.D.\,21, on a rainy Sunday morning, Jesus took unceremonious leave of his family, only explaining that he was going over to Tiberias and then on a visit to other cities about the Sea of Galilee. And thus he left them, never again to be a regular member of that household.
 \vs p129 1:2 He spent one week at Tiberias, the new city which was soon to succeed Sepphoris as the capital of Galilee; and finding little to interest him, he passed on successively through Magdala and Bethsaida to Capernaum, where he stopped to pay a visit to his father’s friend Zebedee. Zebedee’s sons were fishermen; he himself was a boatbuilder. Jesus of Nazareth was an expert in both designing and building; he was a master at working with wood; and Zebedee had long known of the skill of the Nazareth craftsman. For a long time Zebedee had contemplated making improved boats; he now laid his plans before Jesus and invited the visiting carpenter to join him in the enterprise, and Jesus readily consented.
-\vs p129 1:3 Jesus worked with Zebedee only a little more than one year, but during that time he created a new style of boat and established entirely new methods of boatmaking. By superior technique and greatly improved methods of steaming the boards, Jesus and Zebedee began to build boats of a very superior type, craft which were far more safe for sailing the lake than were the older types. For several years Zebedee had more work, turning out these new\hyp{}style boats, than his small establishment could handle; in less than five years practically all the craft on the lake had been built in the shop of Zebedee at Capernaum. Jesus became well known to the Galilean fisherfolk as the designer of the new boats.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/The-Master-Boatbuilder.jpg}\caption{The Master Boatbuilder by Russ Docken}\end{figure}}
+\vs p129 1:3 Jesus worked with Zebedee only a little more than one year, but during that time he created a new style of boat and established entirely new methods of boatmaking. By superior technique and greatly improved methods of steaming the boards, Jesus and Zebedee began to build boats of a very superior type, craft which were far more safe for sailing the lake than were the older types. For several years Zebedee had more work, turning out these new\hyp{}style boats, than his small establishment could handle; in less than five years practically all the craft on the lake had been built in the shop of Zebedee at Capernaum. Jesus became well known to the Galilean fisherfolk as the designer of the new boats.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\tunemarkup{pgkoboaurahd}{0.8}\tunemarkup{pgnexus10}{0.9}\columnwidth]{images/The-Master-Boatbuilder.jpg}\caption{The Master Boatbuilder by Russ Docken}\end{figure}}
 \vs p129 1:4 Zebedee was a moderately well\hyp{}to\hyp{}do man; his boatbuilding shops were on the lake to the south of Capernaum, and his home was situated down the lake shore near the fishing headquarters of Bethsaida. Jesus lived in the home of Zebedee during the year and more he remained at Capernaum. He had long worked alone in the world, that is, without a father, and greatly enjoyed this period of working with a father\hyp{}partner.
 \vs p129 1:5 Zebedee’s wife, Salome, was a relative of Annas, onetime high priest at Jerusalem and still the most influential of the Sadducean group, having been deposed only eight years previously. Salome became a great admirer of Jesus. She loved him as she loved her own sons, James, John, and David, while her four daughters looked upon Jesus as their elder brother. Jesus often went out fishing with James, John, and David, and they learned that he was an experienced fisherman as well as an expert boatbuilder.
 \vs p129 1:6 \pc All this year Jesus sent money each month to James. He returned to Nazareth in October to attend Martha’s wedding, and he was not again in Nazareth for over two years, when he returned shortly before the double wedding of Simon and Jude.
