--- a/tex/p135.tex
+++ b/tex/p135.tex
@@ -29,7 +29,7 @@
 \vs p135 2:4 As time passed, John returned less often to Hebron, while he made more frequent visits to Engedi. He was so entirely different from the majority of the Nazarites that he found it very difficult fully to fraternize with the brotherhood. But he was very fond of Abner, the acknowledged leader and head of the Engedi colony.
 \usection{The Life of a Shepherd}
 \vs p135 3:1 Along the valley of this little brook John built no less than a dozen stone shelters and night corrals, consisting of piled\hyp{}up stones, wherein he could watch over and safeguard his herds of sheep and goats. John’s life as a shepherd afforded him a great deal of time for thought. He talked much with Ezda, an orphan lad of Beth\hyp{}zur, whom he had in a way adopted, and who cared for the herds when he made trips to Hebron to see his mother and to sell sheep, as well as when he went down to Engedi for Sabbath services. John and the lad lived very simply, subsisting on mutton, goat’s milk, wild honey, and the edible locusts of that region. This, their regular diet, was supplemented by provisions brought from Hebron and Engedi from time to time.
-\vs p135 3:2 \pc Elizabeth kept John posted about Palestinian and world affairs, and his conviction grew deeper and deeper that the time was fast approaching when the old order was to end; that he was to become the herald of the approach of a new age, “the kingdom of heaven.” This rugged shepherd was very partial to the writings of the Prophet Daniel. He read 1,000 times Daniel’s description of the great image, which Zacharias had told him represented the history of the great kingdoms of the world, beginning with Babylon, then Persia, Greece, and finally Rome. John perceived that already was Rome composed of such polyglot peoples and races that it could never become a strongly cemented and firmly consolidated empire. He believed that Rome was even then divided, as Syria, Egypt, Palestine, and other provinces; and then he further read “in the days of these kings shall the God of heaven set up a kingdom which shall never be destroyed. And this kingdom shall not be left to other people but shall break in pieces and consume all these kingdoms, and it shall stand forever.” “And there was given him dominion and glory and a kingdom that all peoples, nations, and languages should serve him. His dominion is an everlasting dominion, which shall not pass away, and his kingdom never shall be destroyed.” “And the kingdom and dominion and the greatness of the kingdom under the whole heaven shall be given to the people of the saints of the Most High, whose kingdom is an everlasting kingdom, and all dominions shall serve and obey him.”
+\vs p135 3:2 \pc Elizabeth kept John posted about Palestinian and world affairs, and his conviction grew deeper and deeper that the time was fast approaching when the old order was to end; that he was to become the herald of the approach of a new age, “the kingdom of heaven.” This rugged shepherd was very partial to the writings of the Prophet Daniel. He read a thousand times Daniel’s description of the great image, which Zacharias had told him represented the history of the great kingdoms of the world, beginning with Babylon, then Persia, Greece, and finally Rome. John perceived that already was Rome composed of such polyglot peoples and races that it could never become a strongly cemented and firmly consolidated empire. He believed that Rome was even then divided, as Syria, Egypt, Palestine, and other provinces; and then he further read “in the days of these kings shall the God of heaven set up a kingdom which shall never be destroyed. And this kingdom shall not be left to other people but shall break in pieces and consume all these kingdoms, and it shall stand forever.” “And there was given him dominion and glory and a kingdom that all peoples, nations, and languages should serve him. His dominion is an everlasting dominion, which shall not pass away, and his kingdom never shall be destroyed.” “And the kingdom and dominion and the greatness of the kingdom under the whole heaven shall be given to the people of the saints of the Most High, whose kingdom is an everlasting kingdom, and all dominions shall serve and obey him.”
 \vs p135 3:3 \pc John was never able completely to rise above the confusion produced by what he had heard from his parents concerning Jesus and by these passages which he read in the Scriptures. In Daniel he read: “I saw in the night visions, and, behold, one like the Son of Man came with the clouds of heaven, and there was given him dominion and glory and a kingdom.” But these words of the prophet did not harmonize with what his parents had taught him. Neither did his talk with Jesus, at the time of his visit when he was 18 years old, correspond with these statements of the Scriptures. Notwithstanding this confusion, throughout all of his perplexity his mother assured him that his distant cousin, Jesus of Nazareth, was the true Messiah, that he had come to sit on the throne of David, and that he (John) was to become his advance herald and chief support.
 \vs p135 3:4 From all John heard of the vice and wickedness of Rome and the dissoluteness and moral barrenness of the empire, from what he knew of the evil doings of Herod Antipas and the governors of Judea, he was minded to believe that the end of the age was impending. It seemed to this rugged and noble child of nature that the world was ripe for the end of the age of man and the dawn of the new and divine age --- the kingdom of heaven. The feeling grew in John’s heart that he was to be the last of the old prophets and the first of the new. And he fairly vibrated with the mounting impulse to go forth and proclaim to all men: “Repent! Get right with God! Get ready for the end; prepare yourselves for the appearance of the new and eternal order of earth affairs, the kingdom of heaven.”
 \usection{The Death of Elizabeth}
@@ -63,11 +63,11 @@
 \vs p135 7:3 In response to the questions of his disciples John continued to expand his teachings, from day to day adding more that was helpful and comforting compared with his early and cryptic message: “Repent and be baptized.” By this time throngs were arriving from Galilee and the Decapolis. Scores of earnest believers lingered with their adored teacher day after day.
 \usection{Meeting of Jesus and John}
 \vs p135 8:1 By December of A.D.\,25, when John reached the neighbourhood of Pella in his journey up the Jordan, his fame had extended throughout all Palestine, and his work had become the chief topic of conversation in all the towns about the lake of Galilee. Jesus had spoken favourably of John’s message, and this had caused many from Capernaum to join John’s cult of repentance and baptism. James and John the fishermen sons of Zebedee had gone down in December, soon after John took up his preaching position near Pella, and had offered themselves for baptism. They went to see John once a week and brought back to Jesus fresh, firsthand reports of the evangelist’s work.
-\vs p135 8:2 Jesus’ brothers James and Jude had talked about going down to John for baptism; and now that Jude had come over to Capernaum for the Sabbath services, both he and James, after listening to Jesus’ discourse in the synagogue, decided to take counsel with him concerning their plans. This was on Saturday night, January 12, A.D.\,26. Jesus requested that they postpone the discussion until the following day, when he would give them his answer. He slept very little that night, being in close communion with the Father in heaven. He had arranged to have noontime lunch with his brothers and to advise them concerning baptism by John. That Sunday morning Jesus was working as usual in the boatshop. James and Jude had arrived with the lunch and were waiting in the lumber room for him, as it was not yet time for the midday recess, and they knew that Jesus was very regular about such matters.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/My-Hour-Has-Come.jpg}\caption{My hour has come by Russ~Docken}\end{figure}}
+\vs p135 8:2 Jesus’ brothers James and Jude had talked about going down to John for baptism; and now that Jude had come over to Capernaum for the Sabbath services, both he and James, after listening to Jesus’ discourse in the synagogue, decided to take counsel with him concerning their plans. This was on Saturday night, January 12, A.D.\,26. Jesus requested that they postpone the discussion until the following day, when he would give them his answer. He slept very little that night, being in close communion with the Father in heaven. He had arranged to have noontime lunch with his brothers and to advise them concerning baptism by John. That Sunday morning Jesus was working as usual in the boatshop. James and Jude had arrived with the lunch and were waiting in the lumber room for him, as it was not yet time for the midday recess, and they knew that Jesus was very regular about such matters.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/My-Hour-Has-Come.jpg}\caption{My hour has come by Russ Docken}\end{figure}}
 \vs p135 8:3 Just before the noon rest, Jesus laid down his tools, removed his work apron, and merely announced to the three workmen in the room with him, \textcolour{ubdarkred}{“My hour has come.”} He went out to his brothers James and Jude, repeating, \textcolour{ubdarkred}{“My hour has come --- let us go to John.”} And they started immediately for Pella, eating their lunch as they journeyed. This was on Sunday, January 13. They tarried for the night in the Jordan valley and arrived on the scene of John’s baptizing about noon of the next day.
 \vs p135 8:4 \pc John had just begun baptizing the candidates for the day. Scores of repentants were standing in line awaiting their turn when Jesus and his two brothers took up their positions in this line of earnest men and women who had become believers in John’s preaching of the coming kingdom. John had been inquiring about Jesus of Zebedee’s sons. He had heard of Jesus’ remarks concerning his preaching, and he was day by day expecting to see him arrive on the scene, but he had not expected to greet him in the line of baptismal candidates.
 \vs p135 8:5 Being engrossed with the details of rapidly baptizing such a large number of converts, John did not look up to see Jesus until the Son of Man stood in his immediate presence. When John recognized Jesus, the ceremonies were halted for a moment while he greeted his cousin in the flesh and asked, “But why do you come down into the water to greet me?” And Jesus answered, \textcolour{ubdarkred}{“To be subject to your baptism.”} John replied: “But I have need to be baptized by you. Why do you come to me?” And Jesus whispered to John: \textcolour{ubdarkred}{“Bear with me now, for it becomes us to set this example for my brothers standing here with me, and that the people may know that my hour has come.”}
-\vs p135 8:6 \pc There was a tone of finality and authority in Jesus’ voice. John was atremble with emotion as he made ready to baptize Jesus of Nazareth in the Jordan at noon on Monday, January 14, A.D.\,26. Thus did John baptize Jesus and his two brothers James and Jude. And when John had baptized these three, he dismissed the others for the day, announcing that he would resume baptisms at noon the next day. As the people were departing, the four men still standing in the water heard a strange sound, and presently there appeared for a moment an apparition immediately over the head of Jesus, and they heard a voice saying, “This is my beloved Son in whom I am well pleased.” A great change came over the countenance of Jesus, and coming up out of the water in silence he took leave of them, going toward the hills to the east. And no man saw Jesus again for 40 days.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Baptism.jpg}\caption{The Baptism of Jesus by William~Hole}\end{figure}}
+\vs p135 8:6 \pc There was a tone of finality and authority in Jesus’ voice. John was atremble with emotion as he made ready to baptize Jesus of Nazareth in the Jordan at noon on Monday, January 14, A.D.\,26. Thus did John baptize Jesus and his two brothers James and Jude. And when John had baptized these three, he dismissed the others for the day, announcing that he would resume baptisms at noon the next day. As the people were departing, the four men still standing in the water heard a strange sound, and presently there appeared for a moment an apparition immediately over the head of Jesus, and they heard a voice saying, “This is my beloved Son in whom I am well pleased.” A great change came over the countenance of Jesus, and coming up out of the water in silence he took leave of them, going toward the hills to the east. And no man saw Jesus again for 40 days.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\tunemarkup{pgkoboaurahd}{0.8}\tunemarkup{pgnexus10}{0.9}\columnwidth]{images/Baptism.jpg}\caption{The Baptism of Jesus by William Hole}\end{figure}}
 \vs p135 8:7 John followed Jesus a sufficient distance to tell him the story of Gabriel’s visit to his mother ere either had been born, as he had heard it so many times from his mother’s lips. He allowed Jesus to continue on his way after he had said, “Now I know of a certainty that you are the Deliverer.” But Jesus made no reply.
 \usection{Forty Days of Preaching}
 \vs p135 9:1 When John returned to his disciples (he now had some 25 or 30 who abode with him constantly), he found them in earnest conference, discussing what had just happened in connection with Jesus’ baptism. They were all the more astonished when John now made known to them the story of the Gabriel visitation to Mary before Jesus was born, and also that Jesus spoke no word to him even after he had told him about this. There was no rain that evening, and this group of 30 or more talked long into the starlit night. They wondered where Jesus had gone, and when they would see him again.
@@ -85,7 +85,7 @@
 \vs p135 10:3 Herod Antipas, in whose territory John had been preaching, became alarmed lest he and his disciples should start a rebellion. Herod also resented John’s public criticisms of his domestic affairs. In view of all this, Herod decided to put John in prison. Accordingly, very early in the morning of June 12, before the multitude arrived to hear the preaching and witness the baptizing, the agents of Herod placed John under arrest. As weeks passed and he was not released, his disciples scattered over all Palestine, many of them going into Galilee to join the followers of Jesus.
 \usection{John in Prison}
 \vs p135 11:1 John had a lonely and somewhat bitter experience in prison. Few of his followers were permitted to see him. He longed to see Jesus but had to be content with hearing of his work through those of his followers who had become believers in the Son of Man. He was often tempted to doubt Jesus and his divine mission. If Jesus were the Messiah, why did he do nothing to deliver him from this unbearable imprisonment? For more than a year and a half this rugged man of God’s outdoors languished in that despicable prison. And this experience was a great test of his faith in, and loyalty to, Jesus. Indeed, this whole experience was a great test of John’s faith even in God. Many times was he tempted to doubt even the genuineness of his own mission and experience.
-\vs p135 11:2 \pc After he had been in prison several months, a group of his disciples came to him and, after reporting concerning the public activities of Jesus, said: “So you see, Teacher, that he who was with you at the upper Jordan prospers and receives all who come to him. He even feasts with publicans and sinners. You bore courageous witness to him, and yet he does nothing to effect your deliverance.” But John answered his friends: “This man can do nothing unless it has been given him by his Father in heaven. You well remember that I said, ‘I am not the Messiah, but I am one sent on before to prepare the way for him.’ And that I did. He who has the bride is the bridegroom, but the friend of the bridegroom who stands near by and hears him rejoices greatly because of the bridegroom’s voice. This, my joy, therefore is fulfilled. He must increase but I must decrease. I am of this earth and have declared my message. Jesus of Nazareth comes down to the earth from heaven and is above us all. The Son of Man has descended from God, and the words of God he will declare to you. For the Father in heaven gives not the spirit by measure to his own Son. The Father loves his Son and will presently put all things in the hands of this Son. He who believes in the Son has eternal life. And these words which I speak are true and abiding.”\fnc{\ldots{}friend of the bridegroom who stands \bibtextul{near-by} and hears him rejoices\ldots{} \bibexpl{All other instances of near by as an adverb are open; with one exception adjectives are hyphenated (near-by). Consistent usage would therefore support this change to the open form.}}
+\vs p135 11:2 \pc After he had been in prison several months, a group of his disciples came to him and, after reporting concerning the public activities of Jesus, said: “So you see, Teacher, that he who was with you at the upper Jordan prospers and receives all who come to him. He even feasts with publicans and sinners. You bore courageous witness to him, and yet he does nothing to effect your deliverance.” But John answered his friends: “This man can do nothing unless it has been given him by his Father in heaven. You well remember that I said, ‘I am not the Messiah, but I am one sent on before to prepare the way for him.’ And that I did. He who has the bride is the bridegroom, but the friend of the bridegroom who stands near by\fnc{In the 1955 text: near\hyp{}by.} and hears him rejoices greatly because of the bridegroom’s voice. This, my joy, therefore is fulfilled. He must increase but I must decrease. I am of this earth and have declared my message. Jesus of Nazareth comes down to the earth from heaven and is above us all. The Son of Man has descended from God, and the words of God he will declare to you. For the Father in heaven gives not the spirit by measure to his own Son. The Father loves his Son and will presently put all things in the hands of this Son. He who believes in the Son has eternal life. And these words which I speak are true and abiding.”
 \vs p135 11:3 \pc These disciples were amazed at John’s pronouncement, so much so that they departed in silence. John was also much agitated, for he perceived that he had uttered a prophecy. Never again did he wholly doubt the mission and divinity of Jesus. But it was a sore disappointment to John that Jesus sent him no word, that he came not to see him, and that he exercised none of his great power to deliver him from prison. But Jesus knew all about this. He had great love for John, but being now cognizant of his divine nature and knowing fully the great things in preparation for John when he departed from this world and also knowing that John’s work on earth was finished, he constrained himself not to interfere in the natural outworking of the great preacher\hyp{}prophet’s career.
 \vs p135 11:4 \pc This long suspense in prison was humanly unbearable. Just a few days before his death John again sent trusted messengers to Jesus, inquiring: “Is my work done? Why do I languish in prison? Are you truly the Messiah, or shall we look for another?” And when these two disciples gave this message to Jesus, the Son of Man replied: \textcolour{ubdarkred}{“Go back to John and tell him that I have not forgotten but to suffer me also this, for it becomes us to fulfil all righteousness. Tell John what you have seen and heard --- that the poor have good tidings preached to them --- and, finally, tell the beloved herald of my earth mission that he shall be abundantly blessed in the age to come if he finds no occasion to doubt and stumble over me.”} And this was the last word John received from Jesus. This message greatly comforted him and did much to stabilize his faith and prepare him for the tragic end of his life in the flesh which followed so soon upon the heels of this memorable occasion.
 \usection{Death of John the Baptist}
