--- a/tex/p137.tex
+++ b/tex/p137.tex
@@ -44,7 +44,7 @@
 \vs p137 4:5 This move of his mother was a great disappointment to the human Jesus, and he was much sobered by his reaction to her suggestive proposal that he permit himself to indulge in some outward demonstration of his divinity. That was one of the very things he had decided not to do when so recently isolated in the hills. For several hours Mary was much depressed. She said to James: “I cannot understand him; what can it all mean? Is there no end to his strange conduct?” James and Jude tried to comfort their mother, while Jesus withdrew for an hour’s solitude. But he returned to the gathering and was once more light\hyp{}hearted and joyous.
 \vs p137 4:6 \pc The wedding proceeded with a hush of expectancy, but the entire ceremony was finished and not a move, not a word, from the honoured guest. Then it was whispered about that the carpenter and boatbuilder, announced by John as “the Deliverer,” would show his hand during the evening festivities, perhaps at the wedding supper. But all expectance of such a demonstration was effectually removed from the minds of his six disciple\hyp{}apostles when he called them together just before the wedding supper and, in great earnestness, said: \textcolour{ubdarkred}{“Think not that I have come to this place to work some wonder for the gratification of the curious or for the conviction of those who doubt. Rather are we here to wait upon the will of our Father who is in heaven.”} But when Mary and the others saw him in consultation with his associates, they were fully persuaded in their own minds that something extraordinary was about to happen. And they all sat down to enjoy the wedding supper and the evening of festive good fellowship.
 \vs p137 4:7 \pc The father of the bridegroom had provided plenty of wine for all the guests bidden to the marriage feast, but how was he to know that the marriage of his son was to become an event so closely associated with the expected manifestation of Jesus as the Messianic deliverer? He was delighted to have the honour of numbering the celebrated Galilean among his guests, but before the wedding supper was over, the servants brought him the disconcerting news that the wine was running short. By the time the formal supper had ended and the guests were strolling about in the garden, the mother of the bridegroom confided to Mary that the supply of wine was exhausted. And Mary confidently said: “Have no worry --- I will speak to my son. He will help us.” And thus did she presume to speak, notwithstanding the rebuke of but a few hours before.
-\vs p137 4:8 Throughout a period of many years, Mary had always turned to Jesus for help in every crisis of their home life at Nazareth so that it was only natural for her to think of him at this time. But this ambitious mother had still other motives for appealing to her eldest son on this occasion. As Jesus was standing alone in a corner of the garden, his mother approached him, saying, “My son, they have no wine.” And Jesus answered, \textcolour{ubdarkred}{“My good woman, what have I to do with that?”} Said Mary, “But I believe your hour has come; cannot you help us?” Jesus replied: \textcolour{ubdarkred}{“Again I declare that I have not come to do things in this wise. Why do you trouble me again with these matters?”} And then, breaking down in tears, Mary entreated him, “But, my son, I promised them that you would help us; won’t you please do something for me?” And then spoke Jesus: \textcolour{ubdarkred}{“Woman, what have you to do with making such promises? See that you do it not again. We must in all things wait upon the will of the Father in heaven.”}\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Wedding.jpg}\caption{The Wedding at Cana by William Hole}\end{figure}}
+\vs p137 4:8 Throughout a period of many years, Mary had always turned to Jesus for help in every crisis of their home life at Nazareth so that it was only natural for her to think of him at this time. But this ambitious mother had still other motives for appealing to her eldest son on this occasion. As Jesus was standing alone in a corner of the garden, his mother approached him, saying, “My son, they have no wine.” And Jesus answered, \textcolour{ubdarkred}{“My good woman, what have I to do with that?”} Said Mary, “But I believe your hour has come; cannot you help us?” Jesus replied: \textcolour{ubdarkred}{“Again I declare that I have not come to do things in this wise. Why do you trouble me again with these matters?”} And then, breaking down in tears, Mary entreated him, “But, my son, I promised them that you would help us; won’t you please do something for me?” And then spoke Jesus: \textcolour{ubdarkred}{“Woman, what have you to do with making such promises? See that you do it not again. We must in all things wait upon the will of the Father in heaven.”}\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\tunemarkup{pgkoboaurahd}{0.8}\columnwidth]{images/Wedding.jpg}\caption{The Wedding at Cana by William Hole}\end{figure}}
 \vs p137 4:9 Mary the mother of Jesus was crushed; she was stunned! As she stood there before him motionless, with the tears streaming down her face, the human heart of Jesus was overcome with compassion for the woman who had borne him in the flesh; and bending forward, he laid his hand tenderly upon her head, saying: \textcolour{ubdarkred}{“Now, now, Mother Mary, grieve not over my apparently hard sayings, for have I not many times told you that I have come only to do the will of my heavenly Father? Most gladly would I do what you ask of me if it were a part of the Father’s will --- “} and Jesus stopped short, he hesitated. Mary seemed to sense that something was happening. Leaping up, she threw her arms around Jesus’ neck, kissed him, and rushed off to the servants’ quarters, saying, “Whatever my son says, that do.” But Jesus said nothing. He now realized that he had already said --- or rather desirefully thought --- too much.
 \vs p137 4:10 Mary was dancing with glee. She did not know how the wine would be produced, but she confidently believed that she had finally persuaded her first\hyp{}born son to assert his authority, to dare to step forth and claim his position and exhibit his Messianic power. And, because of the presence and association of certain universe powers and personalities, of which all those present were wholly ignorant, she was not to be disappointed. The wine Mary desired and which Jesus, the God\hyp{}man, humanly and sympathetically wished for, was forthcoming.
 \vs p137 4:11 Near at hand stood 6 waterpots of stone, filled with water, holding about 75 litres apiece. This water was intended for subsequent use in the final purification ceremonies of the wedding celebration. The commotion of the servants about these huge stone vessels, under the busy direction of his mother, attracted Jesus’ attention, and going over, he observed that they were drawing wine out of them by the pitcherful.
