--- a/tex/p144.tex
+++ b/tex/p144.tex
@@ -31,7 +31,7 @@
 \vs p144 2:5 \textcolour{ubdarkred}{“Let me tell you the story of a certain judge who lived in a wicked city. This judge feared not God nor had respect for man. Now there was a needy widow in that city who came repeatedly to this unjust judge, saying, ‘Protect me from my adversary.’ For some time he would not give ear to her, but presently he said to himself: ‘Though I fear not God nor have regard for man, yet because this widow ceases not to trouble me, I will vindicate her lest she wear me out by her continual coming.’ These stories I tell you to encourage you to persist in praying and not to intimate that your petitions will change the just and righteous Father above. Your persistence, however, is not to win favour with God but to change your earth attitude and to enlarge your soul’s capacity for spirit receptivity.}
 \vs p144 2:6 \textcolour{ubdarkred}{“But when you pray, you exercise so little faith. Genuine faith will remove mountains of material difficulty which may chance to lie in the path of soul expansion and spiritual progress.”}
 \usection{The Believer’s Prayer}
-\vs p144 3:1 But the apostles were not yet satisfied; they desired Jesus to give them a model prayer which they could teach the new disciples. After listening to this discourse on prayer, James Zebedee said: “Very good, Master, but we do not desire a form of prayer for ourselves so much as for the newer believers who so frequently beseech us, ‘Teach us how acceptably to pray to the Father in heaven.’”\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Lords-Prayer.jpg}\caption{The Lord's Prayer by Harold~Copping}\end{figure}}
+\vs p144 3:1 But the apostles were not yet satisfied; they desired Jesus to give them a model prayer which they could teach the new disciples. After listening to this discourse on prayer, James Zebedee said: “Very good, Master, but we do not desire a form of prayer for ourselves so much as for the newer believers who so frequently beseech us, ‘Teach us how acceptably to pray to the Father in heaven.’”\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\tunemarkup{pgkoboaurahd}{0.8}\columnwidth]{images/Lords-Prayer.jpg}\caption{The Lord's Prayer by Harold Copping}\end{figure}}
 \vs p144 3:2 When James had finished speaking, Jesus said: \textcolour{ubdarkred}{“If, then, you still desire such a prayer, I would present the one which I taught my brothers and sisters in Nazareth”:}
 \vspace*{1ex}
 \vs p144 3:3 \textcolour{ubdarkred}{Our Father who is in heaven,}
