--- a/tex/p145.tex
+++ b/tex/p145.tex
@@ -11,7 +11,7 @@
 \usection{The Draught of Fishes}
 \vs p145 1:1 On Friday morning of this same week, when Jesus was teaching by the seaside, the people crowded him so near the water’s edge that he signalled to some fishermen occupying a near\hyp{}by boat to come to his rescue. Entering the boat, he continued to teach the assembled multitude for more than two hours. This boat was named “Simon”; it was the former fishing vessel of Simon Peter and had been built by Jesus’ own hands. On this particular morning the boat was being used by David Zebedee and two associates, who had just come in near shore from a fruitless night of fishing on the lake. They were cleaning and mending their nets when Jesus requested them to come to his assistance.
 \vs p145 1:2 After Jesus had finished teaching the people, he said to David: \textcolour{ubdarkred}{“As you were delayed by coming to my help, now let me work with you. Let us go fishing; put out into yonder deep and let down your nets for a draught.”} But Simon, one of David’s assistants, answered: “Master, it is useless. We toiled all night and took nothing; however, at your bidding we will put out and let down the nets.” And Simon consented to follow Jesus’ directions because of a gesture made by his master, David. When they had proceeded to the place designated by Jesus, they let down their nets and enclosed such a multitude of fish that they feared the nets would break, so much so that they signalled to their associates on the shore to come to their assistance. When they had filled all three boats with fish, almost to sinking, this Simon fell down at Jesus’ knees, saying, “Depart from me, Master, for I am a sinful man.” Simon and all who were concerned in this episode were amazed at the draught of fishes. From that day David Zebedee, this Simon, and their associates forsook their nets and followed Jesus.
-\vs p145 1:3 But this was in no sense a miraculous draught of fishes. Jesus was a close student of nature; he was an experienced fisherman and knew the habits of the fish in the Sea of Galilee. On this occasion he merely directed these men to the place where the fish were usually to be found at this time of day. But Jesus’ followers always regarded this as a miracle.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Fishes.jpg}\caption{The Draught of Fishes by William~Hole}\end{figure}}
+\vs p145 1:3 But this was in no sense a miraculous draught of fishes. Jesus was a close student of nature; he was an experienced fisherman and knew the habits of the fish in the Sea of Galilee. On this occasion he merely directed these men to the place where the fish were usually to be found at this time of day. But Jesus’ followers always regarded this as a miracle.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\tunemarkup{pgkoboaurahd}{0.8}\columnwidth]{images/Fishes.jpg}\caption{The Draught of Fishes by William Hole}\end{figure}}
 \usection{Afternoon at the Synagogue}
 \vs p145 2:1 The next Sabbath, at the afternoon service in the synagogue, Jesus preached his sermon on \textcolour{ubdarkred}{“The Will of the Father in Heaven.”} In the morning Simon Peter had preached on “The Kingdom.” At the Thursday evening meeting of the synagogue Andrew had taught, his subject being “The New Way.” At this particular time more people believed in Jesus in Capernaum than in any other one city on earth.
 \vs p145 2:2 As Jesus taught in the synagogue this Sabbath afternoon, according to custom he took the first text from the Law\fnc{text from the \bibtextul{law}. See the note on \bibref[123:5.3]{p123 5:3}.}, reading from the Book of Exodus: \textcolour{ubdarkred}{“And you shall serve the Lord, your God, and he shall bless your bread and your water, and all sickness shall be taken away from you.”} He chose the second text from the Prophets, reading from Isaiah: \textcolour{ubdarkred}{“Arise and shine, for your light has come, and the glory of the Lord has risen upon you. Darkness may cover the earth and gross darkness the people, but the spirit of the Lord shall arise upon you, and the divine glory shall be seen with you. Even the gentiles shall come to this light, and many great minds shall surrender to the brightness of this light.”}
@@ -38,7 +38,7 @@
 \vs p145 3:5 \pc Soon after the setting of the sun, as Jesus and the apostles still lingered about the supper table, Peter’s wife heard voices in the front yard and, on going to the door, saw a large company of sick folks assembling, and that the road from Capernaum was crowded by those who were on their way to seek healing at Jesus’ hands. On seeing this sight, she went at once and informed her husband, who told Jesus.
 \vs p145 3:6 When the Master stepped out of the front entrance of Zebedee’s house, his eyes met an array of stricken and afflicted humanity. He gazed upon almost 1,000 sick and ailing human beings; at least that was the number of persons gathered together before him. Not all present were afflicted; some had come assisting their loved ones in this effort to secure healing.
 \vs p145 3:7 The sight of these afflicted mortals, men, women, and children, suffering in large measure as a result of the mistakes and misdeeds of his own trusted Sons of universe administration, peculiarly touched the human heart of Jesus and challenged the divine mercy of this benevolent Creator Son. But Jesus well knew he could never build an enduring spiritual movement upon the foundation of purely material wonders. It had been his consistent policy to refrain from exhibiting his creator prerogatives. Not since Cana had the supernatural or miraculous attended his teaching; still, this afflicted multitude touched his sympathetic heart and mightily appealed to his understanding affection.
-\vs p145 3:8 A voice from the front yard exclaimed: “Master, speak the word, restore our health, heal our diseases, and save our souls.” No sooner had these words been uttered than a vast retinue of seraphim, physical controllers, Life Carriers, and midwayers, such as always attended this incarnated Creator of a universe, made themselves ready to act with creative power should their Sovereign give the signal. This was one of those moments in the earth career of Jesus in which divine wisdom and human compassion were so interlocked in the judgment of the Son of Man that he sought refuge in appeal to his Father’s will.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Sundown-Healing.jpg}\caption{The Healing at Sundown by J.~Kirk~Richards}\end{figure}}
+\vs p145 3:8 A voice from the front yard exclaimed: “Master, speak the word, restore our health, heal our diseases, and save our souls.” No sooner had these words been uttered than a vast retinue of seraphim, physical controllers, Life Carriers, and midwayers, such as always attended this incarnated Creator of a universe, made themselves ready to act with creative power should their Sovereign give the signal. This was one of those moments in the earth career of Jesus in which divine wisdom and human compassion were so interlocked in the judgment of the Son of Man that he sought refuge in appeal to his Father’s will.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Sundown-Healing.jpg}\caption{The Healing at Sundown by J.~Kirk Richards}\end{figure}}
 \vs p145 3:9 When Peter implored the Master to heed their cry for help, Jesus, looking down upon the afflicted throng, answered: \textcolour{ubdarkred}{“I have come into the world to reveal the Father and establish his kingdom. For this purpose have I lived my life to this hour. If, therefore, it should be the will of Him who sent me and not inconsistent with my dedication to the proclamation of the gospel of the kingdom of heaven, I would desire to see my children made whole --- and --- ”} but the further words of Jesus were lost in the tumult.
 \vs p145 3:10 Jesus had passed the responsibility of this healing decision to the ruling of his Father. Evidently the Father’s will interposed no objection, for the words of the Master had scarcely been uttered when the assembly of celestial personalities serving under the command of Jesus’ Personalized Thought Adjuster was mightily astir. The vast retinue descended into the midst of this motley throng of afflicted mortals, and in a moment of time 683 men, women, and children were made whole, were perfectly healed of all their physical diseases and other material disorders. Such a scene was never witnessed on earth before that day, nor since. And for those of us who were present to behold this creative wave of healing, it was indeed a thrilling spectacle.
 \vs p145 3:11 \pc But of all the beings who were astonished at this sudden and unexpected outbreak of supernatural healing, Jesus was the most surprised. In a moment when his human interests and sympathies were focused upon the scene of suffering and affliction there spread out before him, he neglected to bear in his human mind the admonitory warnings of his Personalized Adjuster regarding the impossibility of limiting the time element of the creator prerogatives of a Creator Son under certain conditions and in certain circumstances. Jesus desired to see these suffering mortals made whole if his Father’s will would not thereby be violated. The Personalized Adjuster of Jesus instantly ruled that such an act of creative energy at that time would not transgress the will of the Paradise Father, and by such a decision --- in view of Jesus’ preceding expression of healing desire --- the creative act \bibemph{was.} What a \bibemph{Creator Son} desires and his Father \bibemph{wills} IS. Not in all of Jesus’ subsequent earth life did another such en masse physical healing of mortals take place.
