--- a/tex/p164.tex
+++ b/tex/p164.tex
@@ -25,7 +25,7 @@
 \vs p164 3:5 However, inconsistent as it seems, while such blindness was supposed to be the result of sin, the Jews held that it was meritorious in a high degree to give alms to these blind beggars. It was the custom of these blind men constantly to chant to the passers\hyp{}by, “O tenderhearted, gain merit by assisting the blind.”
 \vs p164 3:6 \pc Jesus entered into the discussion of this case with Nathaniel and Thomas, not only because he had already decided to use this blind man as the means of that day bringing his mission once more prominently to the notice of the Jewish leaders, but also because he always encouraged his apostles to seek for the true causes of all phenomena, natural or spiritual. He had often warned them to avoid the common tendency to assign spiritual causes to commonplace physical events.
 \vs p164 3:7 Jesus decided to use this beggar in his plans for that day’s work, but before doing anything for the blind man, Josiah by name, he proceeded to answer Nathaniel’s question. Said the Master: \textcolour{ubdarkred}{“Neither did this man sin nor his parents that the works of God might be manifest in him. This blindness has come upon him in the natural course of events, but we must now do the works of Him who sent me, while it is still day, for the night will certainly come when it will be impossible to do the work we are about to perform. When I am in the world, I am the light of the world, but in only a little while I will not be with you.”}
-\vs p164 3:8 When Jesus had spoken, he said to Nathaniel and Thomas: \textcolour{ubdarkred}{“Let us create the sight of this blind man on this Sabbath day that the scribes and Pharisees may have the full occasion which they seek for accusing the Son of Man.”} Then, stooping over, he spat on the ground and mixed the clay with the spittle, and speaking of all this so that the blind man could hear, he went up to Josiah and put the clay over his sightless eyes, saying: \textcolour{ubdarkred}{“Go, my son, wash away this clay in the pool of Siloam, and immediately you shall receive your sight.”} And when Josiah had so washed in the pool of Siloam, he returned to his friends and family, seeing.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Siloam.jpg}\caption{At The Pool Of Siloam by Harold~Copping}\end{figure}}
+\vs p164 3:8 When Jesus had spoken, he said to Nathaniel and Thomas: \textcolour{ubdarkred}{“Let us create the sight of this blind man on this Sabbath day that the scribes and Pharisees may have the full occasion which they seek for accusing the Son of Man.”} Then, stooping over, he spat on the ground and mixed the clay with the spittle, and speaking of all this so that the blind man could hear, he went up to Josiah and put the clay over his sightless eyes, saying: \textcolour{ubdarkred}{“Go, my son, wash away this clay in the pool of Siloam, and immediately you shall receive your sight.”} And when Josiah had so washed in the pool of Siloam, he returned to his friends and family, seeing.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\tunemarkup{pgkoboaurahd}{0.88}\columnwidth]{images/Siloam.jpg}\caption{At The Pool Of Siloam by Harold Copping}\end{figure}}
 \vs p164 3:9 Having always been a beggar, he knew nothing else; so, when the first excitement of the creation of his sight had passed, he returned to his usual place of alms\hyp{}seeking. His friends, neighbours, and all who had known him aforetime, when they observed that he could see, all said, “Is this not Josiah the blind beggar?” Some said it was he, while others said, “No, it is one like him, but this man can see.” But when they asked the man himself, he answered, “I am he.”
 \vs p164 3:10 When they began to inquire of him how he was able to see, he answered them: “A man called Jesus came by this way, and when talking about me with his friends, he made clay with spittle, anointed my eyes, and directed that I should go and wash in the pool of Siloam. I did what this man told me, and immediately I received my sight. And that is only a few hours ago. I do not yet know the meaning of much that I see.” And when the people who began to gather about him asked where they could find the strange man who had healed him, Josiah could answer only that he did not know.
 \vs p164 3:11 \pc This is one of the strangest of all the Master’s miracles. This man did not ask for healing. He did not know that the Jesus who had directed him to wash at Siloam, and who had promised him vision, was the prophet of Galilee who had preached in Jerusalem during the feast of tabernacles. This man had little faith that he would receive his sight, but the people of that day had great faith in the efficacy of the spittle of a great or holy man; and from Jesus’ conversation with Nathaniel and Thomas, Josiah had concluded that his would\hyp{}be benefactor was a great man, a learned teacher or a holy prophet; accordingly he did as Jesus directed him.
