--- a/tex/p168.tex
+++ b/tex/p168.tex
@@ -34,7 +34,7 @@
 \vs p168 1:14 \pc It was the common belief of the Jews that the drop of gall on the point of the sword of the angel of death began to work by the end of the third day, so that it was taking full effect on the fourth day. They allowed that the soul of man might linger about the tomb until the end of the third day, seeking to reanimate the dead body; but they firmly believed that such a soul had gone on to the abode of departed spirits ere the fourth day had dawned.
 \vs p168 1:15 These beliefs and opinions regarding the dead and the departure of the spirits of the dead served to make sure, in the minds of all who were now present at Lazarus’s tomb and subsequently to all who might hear of what was about to occur, that this was really and truly a case of the raising of the dead by the personal working of one who declared he was \textcolour{ubdarkred}{“the resurrection and the life.”}
 \usection{The Resurrection of Lazarus}
-\vs p168 2:1 As this company of some 45 mortals stood before the tomb, they could dimly see the form of Lazarus, wrapped in linen bandages, resting on the right lower niche of the burial cave. While these earth creatures stood there in almost breathless silence, a vast host of celestial beings had swung into their places preparatory to answering the signal for action when it should be given by Gabriel, their commander.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Lazarus.png}\caption{Resurrection of Lazarus by Walter~Rane}\end{figure}}
+\vs p168 2:1 As this company of some 45 mortals stood before the tomb, they could dimly see the form of Lazarus, wrapped in linen bandages, resting on the right lower niche of the burial cave. While these earth creatures stood there in almost breathless silence, a vast host of celestial beings had swung into their places preparatory to answering the signal for action when it should be given by Gabriel, their commander.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Lazarus.png}\caption{Resurrection of Lazarus by Walter Rane}\end{figure}}
 \vs p168 2:2 Jesus lifted up his eyes and said: \textcolour{ubdarkred}{“Father, I am thankful that you heard and granted my request. I know that you always hear me, but because of those who stand here with me, I thus speak with you, that they may believe that you have sent me into the world, and that they may know that you are working with me in that which we are about to do.”} And when he had prayed, he cried with a loud voice, “Lazarus, come forth!”
 \vs p168 2:3 Though these human observers remained motionless, the vast celestial host was all astir in unified action in obedience to the Creator’s word. In just 12 seconds of earth time the hitherto lifeless form of Lazarus began to move and presently sat up on the edge of the stone shelf whereon it had rested. His body was bound about with grave cloths, and his face was covered with a napkin. And as he stood up before them --- alive --- Jesus said, \textcolour{ubdarkred}{“Loose him and let him go.”}
 \vs p168 2:4 All, save the apostles, with Martha and Mary, fled to the house. They were pale with fright and overcome with astonishment. While some tarried, many hastened to their homes.
