--- a/tex/p176.tex
+++ b/tex/p176.tex
@@ -25,7 +25,7 @@
 \vs p176 2:8 Of all the discourses which the Master gave his apostles, none ever became so confused in their minds as this one, given this Tuesday evening on the Mount of Olives, regarding the twofold subject of the destruction of Jerusalem and his own second coming. There was, therefore, little agreement between the subsequent written accounts based on the memories of what the Master said on this extraordinary occasion. Consequently, when the records were left blank concerning much that was said that Tuesday evening, there grew up many traditions; and very early in the second century a Jewish apocalyptic about the Messiah written by one Selta, who was attached to the court of the Emperor Caligula, was bodily copied into the Matthew Gospel and subsequently added (in part) to the Mark and Luke records. It was in these writings of Selta that the parable of the ten virgins appeared. No part of the gospel record ever suffered such confusing misconstruction as this evening’s teaching. But the Apostle John never became thus confused.
 \vs p176 2:9 As these 13 men resumed their journey toward the camp, they were speechless and under great emotional tension. Judas had finally confirmed his decision to abandon his associates. It was a late hour when David Zebedee, John Mark, and a number of the leading disciples welcomed Jesus and the twelve to the new camp, but the apostles did not want to sleep; they wanted to know more about the destruction of Jerusalem, the Master’s departure, and the end of the world.
 \usection{Later Discussion at the Camp}
-\vs p176 3:1 As they gathered about the campfire, some 20 of them, Thomas asked: “Since you are to return to finish the work of the kingdom, what should be our attitude while you are away on the Father’s business?” As Jesus looked them over by the firelight, he answered:\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Master-Teacher.jpg}\caption{The Master Teacher by Michael~Dudash}\end{figure}}
+\vs p176 3:1 As they gathered about the campfire, some 20 of them, Thomas asked: “Since you are to return to finish the work of the kingdom, what should be our attitude while you are away on the Father’s business?” As Jesus looked them over by the firelight, he answered:\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Master-Teacher.jpg}\caption{The Master Teacher by Michael Dudash}\end{figure}}
 \vs p176 3:2 \pc \textcolour{ubdarkred}{“And even you, Thomas, fail to comprehend what I have been saying. Have I not all this time taught you that your connection with the kingdom is spiritual and individual, wholly a matter of personal experience in the spirit by the faith\hyp{}realization that you are a son of God? What more shall I say? The downfall of nations, the crash of empires, the destruction of the unbelieving Jews, the end of an age, even the end of the world, what have these things to do with one who believes this gospel, and who has hid his life in the surety of the eternal kingdom? You who are God\hyp{}knowing and gospel\hyp{}believing have already received the assurances of eternal life. Since your lives have been lived in the spirit and for the Father, nothing can be of serious concern to you. Kingdom builders, the accredited citizens of the heavenly worlds, are not to be disturbed by temporal upheavals or perturbed by terrestrial cataclysms. What does it matter to you who believe this gospel of the kingdom if nations overturn, the age ends, or all things visible crash, since you know that your life is the gift of the Son, and that it is eternally secure in the Father? Having lived the temporal life by faith and having yielded the fruits of the spirit as the righteousness of loving service for your fellows, you can confidently look forward to the next step in the eternal career with the same survival faith that has carried you through your first and earthly adventure in sonship with God.}
 \vs p176 3:3 \textcolour{ubdarkred}{“Each generation of believers should carry on their work, in view of the possible return of the Son of Man, exactly as each individual believer carries forward his lifework in view of inevitable and ever\hyp{}impending natural death. When you have by faith once established yourself as a son of God, nothing else matters as regards the surety of survival. But make no mistake! this survival faith is a living faith, and it increasingly manifests the fruits of that divine spirit which first inspired it in the human heart. That you have once accepted sonship in the heavenly kingdom will not save you in the face of the knowing and persistent rejection of those truths which have to do with the progressive spiritual fruit\hyp{}bearing of the sons of God in the flesh. You who have been with me in the Father’s business on earth can even now desert the kingdom if you find that you love not the way of the Father’s service for mankind.}
 \vs p176 3:4 \textcolour{ubdarkred}{“As individuals, and as a generation of believers, hear me while I speak a parable: There was a certain great man who, before starting out on a long journey to another country, called all his trusted servants before him and delivered into their hands all his goods. To one he gave five talents, to another two, and to another one. And so on down through the entire group of honoured stewards, to each he entrusted his goods according to their several abilities; and then he set out on his journey. When their lord had departed, his servants set themselves at work to gain profits from the wealth entrusted to them. Immediately he who had received five talents began to trade with them and very soon had made a profit of another five talents. In like manner he who had received two talents soon had gained two more. And so did all of these servants make gains for their master except him who received but one talent. He went away by himself and dug a hole in the earth where he hid his lord’s money. Presently the lord of those servants unexpectedly returned and called upon his stewards for a reckoning. And when they had all been called before their master, he who had received the five talents came forward with the money which had been entrusted to him and brought five additional talents, saying, ‘Lord, you gave me five talents to invest, and I am glad to present five other talents as my gain.’ And then his lord said to him: ‘Well done, good and faithful servant, you have been faithful over a few things; I will now set you as steward over many; enter forthwith into the joy of your lord.’ And then he who had received the two talents came forward, saying: ‘Lord, you delivered into my hands two talents; behold, I have gained these other two talents.’ And his lord then said to him: ‘Well done, good and faithful steward; you also have been faithful over a few things, and I will now set you over many; enter you into the joy of your lord.’ And then there came to the accounting he who had received the one talent. This servant came forward, saying, ‘Lord, I knew you and realized that you were a shrewd man in that you expected gains where you had not personally laboured; therefore was I afraid to risk aught of that which was entrusted to me. I safely hid your talent in the earth; here it is; you now have what belongs to you.’ But his lord answered: ‘You are an indolent and slothful steward. By your own words you confess that you knew I would require of you an accounting with reasonable profit, such as your diligent fellow servants have this day rendered. Knowing this, you ought, therefore, to have at least put my money into the hands of the bankers that on my return I might have received my own with interest.’ And then to the chief steward this lord said: ‘Take away this one talent from this unprofitable servant and give it to him who has the ten talents.’\fnc{And so did all of these servants make gains for their master except \bibtextul{he} who received but one talent. \bibexpl{The pronoun is the object of the preposition “except” therefore “him” is correct. See last sentence in subject paragraph for parallel usage where “him” is object of “to” also creating a “him who” phrase.}}}
