--- a/tex/p177.tex
+++ b/tex/p177.tex
@@ -11,7 +11,7 @@
 \vs p177 0:4 Upon hearing these words, David and his armed guards withdrew; but as Jesus started off alone, John Mark came forward with a small basket containing food and water and suggested that, if he intended to be away all day, he might find himself hungry. The Master smiled on John and reached down to take the basket.
 \usection{One Day Alone with God}
 \vs p177 1:1 As Jesus was about to take the lunch basket from John’s hand, the young man ventured to say: “But, Master, you may set the basket down while you turn aside to pray and go on without it. Besides, if I should go along to carry the lunch, you would be more free to worship, and I will surely be silent. I will ask no questions and will stay by the basket when you go apart by yourself to pray.”
-\vs p177 1:2 While making this speech, the temerity of which astonished some of the near\hyp{}by listeners, John had made bold to hold on to the basket. There they stood, both John and Jesus holding the basket. Presently the Master let go and, looking down on the lad, said: \textcolour{ubdarkred}{“Since with all your heart you crave to go with me, it shall not be denied you. We will go off by ourselves and have a good visit. You may ask me any question that arises in your heart, and we will comfort and console each other. You may start out carrying the lunch, and when you grow weary, I will help you. Follow on with me.”}\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Alone-With-God.jpg}\caption{One Day Alone With God by Del~Parson}\end{figure}}
+\vs p177 1:2 While making this speech, the temerity of which astonished some of the near\hyp{}by listeners, John had made bold to hold on to the basket. There they stood, both John and Jesus holding the basket. Presently the Master let go and, looking down on the lad, said: \textcolour{ubdarkred}{“Since with all your heart you crave to go with me, it shall not be denied you. We will go off by ourselves and have a good visit. You may ask me any question that arises in your heart, and we will comfort and console each other. You may start out carrying the lunch, and when you grow weary, I will help you. Follow on with me.”}\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\tunemarkup{pgkoboaurahd}{0.9}\columnwidth]{images/Alone-With-God.jpg}\caption{One Day Alone With God by Del Parson}\end{figure}}
 \vs p177 1:3 Jesus did not return to the camp that evening until after sunset. The Master spent this last day of quiet on earth visiting with this truth\hyp{}hungry youth and talking with his Paradise Father. This event has become known on high as “the day which a young man spent with God in the hills.” Forever this occasion exemplifies the willingness of the Creator to fellowship the creature. Even a youth, if the desire of the heart is really supreme, can command the attention and enjoy the loving companionship of the God of a universe, actually experience the unforgettable ecstasy of being alone with God in the hills, and for a whole day. And such was the unique experience of John Mark on this Wednesday in the hills of Judea.
 \vs p177 1:4 Jesus visited much with John, talking freely about the affairs of this world and the next. John told Jesus how much he regretted that he had not been old enough to be one of the apostles and expressed his great appreciation that he had been permitted to follow on with them since their first preaching at the Jordan ford near Jericho, except for the trip to Phoenicia. Jesus warned the lad not to become discouraged by impending events and assured him he would live to become a mighty messenger of the kingdom.
 \vs p177 1:5 John Mark was thrilled by the memory of this day with Jesus in the hills, but he never forgot the Master’s final admonition, spoken just as they were about to return to the Gethsemane camp, when he said: \textcolour{ubdarkred}{“Well, John, we have had a good visit, a real day of rest, but see to it that you tell no man the things which I told you.”} And John Mark never did reveal anything that transpired on this day which he spent with Jesus in the hills.
@@ -48,7 +48,7 @@
 \vs p177 4:12 At last the chief priests and elders could breathe easily for a few hours. They would not have to arrest Jesus in public, and the securing of Judas as a traitorous ally ensured that Jesus would not escape from their jurisdiction as he had so many times in the past.
 \usection{The Last Social Hour}
 \vs p177 5:1 Since it was Wednesday, this evening at the camp was a social hour. The Master endeavoured to cheer his downcast apostles, but that was well\hyp{}nigh impossible. They were all beginning to realize that disconcerting and crushing events were impending. They could not be cheerful, even when the Master recounted their years of eventful and loving association. Jesus made careful inquiry about the families of all of the apostles and, looking over toward David Zebedee, asked if anyone had heard recently from his mother, his youngest sister, or other members of his family. David looked down at his feet; he was afraid to answer.
-\vs p177 5:2 This was the occasion of Jesus’ warning his followers to beware of the support of the multitude. He recounted their experiences in Galilee when time and again great throngs of people enthusiastically followed them around and then just as ardently turned against them and returned to their former ways of believing and living. And then he said: “And so you must not allow yourselves to be deceived by the great crowds who heard us in the temple, and who seemed to believe our teachings. These multitudes listen to the truth and believe it superficially with their minds, but few of them permit the word of truth to strike down into the heart with living roots. Those who know the gospel only in the mind, and who have not experienced it in the heart, cannot be depended upon for support when real trouble comes. When the rulers of the Jews reach an agreement to destroy the Son of Man, and when they strike with one accord, you will see the multitude either flee in dismay or else stand by in silent amazement while these maddened and blinded rulers lead the teachers of the gospel truth to their death. And then, when adversity and persecution descend upon you, still others who you think love the truth will be scattered, and some will renounce the gospel and desert you. Some who have been very close to us have already made up their minds to desert. You have rested today in preparation for those times which are now upon us. Watch, therefore, and pray that on the morrow you may be strengthened for the days that are just ahead.”\fnc{\ldots{}still others \bibtextul{whom} you think love the truth will be scattered,\ldots{} \bibexpl{This is a situation similar to the two found at \bibref[172:5.2]{p0172 5:2}. The pronoun concerned is the subject of love, not the object of think; therefore who is the correct form. To illustrate: \ldots{}others whom you think Jesus loved\ldots{} [you think Jesus loved them ] \ldots{}others who you think love the truth\ldots{} [you think they love the truth].}}
+\vs p177 5:2 This was the occasion of Jesus’ warning his followers to beware of the support of the multitude. He recounted their experiences in Galilee when time and again great throngs of people enthusiastically followed them around and then just as ardently turned against them and returned to their former ways of believing and living. And then he said: “And so you must not allow yourselves to be deceived by the great crowds who heard us in the temple, and who seemed to believe our teachings. These multitudes listen to the truth and believe it superficially with their minds, but few of them permit the word of truth to strike down into the heart with living roots. Those who know the gospel only in the mind, and who have not experienced it in the heart, cannot be depended upon for support when real trouble comes. When the rulers of the Jews reach an agreement to destroy the Son of Man, and when they strike with one accord, you will see the multitude either flee in dismay or else stand by in silent amazement while these maddened and blinded rulers lead the teachers of the gospel truth to their death. And then, when adversity and persecution descend upon you, still others who\fnc{In 1955 text: whom. This is a situation similar to the two found at \bibref[172:5.2]{p172 5:2}. The pronoun concerned is the subject of love, not the object of think; therefore who is the correct form. To illustrate: \ldots{}others whom you think Jesus loved\ldots{} [you think Jesus loved them ] \ldots{}others who you think love the truth\ldots{} [you think they love the truth].} you think love the truth will be scattered, and some will renounce the gospel and desert you. Some who have been very close to us have already made up their minds to desert. You have rested today in preparation for those times which are now upon us. Watch, therefore, and pray that on the morrow you may be strengthened for the days that are just ahead.”
 \vs p177 5:3 The atmosphere of the camp was charged with an inexplicable tension. Silent messengers came and went, communicating with only David Zebedee. Before the evening had passed, certain ones knew that Lazarus had taken hasty flight from Bethany. John Mark was ominously silent after returning to camp, notwithstanding he had spent the whole day in the Master’s company. Every effort to persuade him to talk only indicated clearly that Jesus had told him not to talk.
 \vs p177 5:4 Even the Master’s good cheer and his unusual sociability frightened them. They all felt the certain drawing upon them of the terrible isolation which they realized was about to descend with crashing suddenness and inescapable terror. They vaguely sensed what was coming, and none felt prepared to face the test. The Master had been away all day; they had missed him tremendously.
 \vs p177 5:5 This Wednesday evening was the low\hyp{}tide mark of their spiritual status up to the actual hour of the Master’s death. Although the next day was one more day nearer the tragic Friday, still, he was with them, and they passed through its anxious hours more gracefully.
