--- a/tex/p192.tex
+++ b/tex/p192.tex
@@ -24,7 +24,7 @@
 \usection{Visiting with the Apostles Two and Two}
 \vs p192 2:1 When they had finished breakfast, and while the others sat by the fire, Jesus beckoned to Peter and to John that they should come with him for a stroll on the beach. As they walked along, Jesus said to John, \textcolour{ubdarkred}{“John, do you love me?”} And when John answered, “Yes, Master, with all my heart,” the Master said: \textcolour{ubdarkred}{“Then, John, give up your intolerance and learn to love men as I have loved you. Devote your life to proving that love is the greatest thing in the world. It is the love of God that impels men to seek salvation. Love is the ancestor of all spiritual goodness, the essence of the true and the beautiful.”}
 \vs p192 2:2 Jesus then turned toward Peter and asked, \textcolour{ubdarkred}{“Peter, do you love me?”} Peter answered, “Lord, you know I love you with all my soul.” Then said Jesus: \textcolour{ubdarkred}{“If you love me, Peter, feed my lambs. Do not neglect to minister to the weak, the poor, and the young. Preach the gospel without fear or favour; remember always that God is no respecter of persons. Serve your fellow men even as I have served you; forgive your fellow mortals even as I have forgiven you. Let experience teach you the value of meditation and the power of intelligent reflection.”}
-\vs p192 2:3 After they had walked along a little farther, the Master turned to Peter and asked, \textcolour{ubdarkred}{“Peter, do you really love me?”} And then said Simon, “Yes, Lord, you know that I love you.” And again said Jesus: \textcolour{ubdarkred}{“Then take good care of my sheep. Be a good and a true shepherd to the flock. Betray not their confidence in you. Be not taken by surprise at the enemy’s hand. Be on guard at all times --- watch and pray.”}\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Appearance.jpg}\caption{The 13\ts{th} Resurrection Appearance by Del~Parson}\end{figure}}
+\vs p192 2:3 After they had walked along a little farther, the Master turned to Peter and asked, \textcolour{ubdarkred}{“Peter, do you really love me?”} And then said Simon, “Yes, Lord, you know that I love you.” And again said Jesus: \textcolour{ubdarkred}{“Then take good care of my sheep. Be a good and a true shepherd to the flock. Betray not their confidence in you. Be not taken by surprise at the enemy’s hand. Be on guard at all times --- watch and pray.”}\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Appearance.jpg}\caption{The 13\ts{th} Resurrection Appearance by Del Parson}\end{figure}}
 \vs p192 2:4 When they had gone a few steps farther, Jesus turned to Peter and, for the third time, asked, \textcolour{ubdarkred}{“Peter, do you truly love me?”} And then Peter, being slightly grieved at the Master’s seeming distrust of him, said with considerable feeling, “Lord, you know all things, and therefore do you know that I really and truly love you.” Then said Jesus: \textcolour{ubdarkred}{“Feed my sheep. Do not forsake the flock. Be an example and an inspiration to all your fellow shepherds. Love the flock as I have loved you and devote yourself to their welfare even as I have devoted my life to your welfare. And follow after me even to the end.”}
 \vs p192 2:5 Peter took this last statement literally --- that he should continue to follow after him --- and turning to Jesus, he pointed to John, asking, “If I follow on after you, what shall this man do?” And then, perceiving that Peter had misunderstood his words, Jesus said: \textcolour{ubdarkred}{“Peter, be not concerned about what your brethren shall do. If I will that John should tarry after you are gone, even until I come back, what is that to you? Only make sure that you follow me.”}
 \vs p192 2:6 \pc This remark spread among the brethren and was received as a statement by Jesus to the effect that John would not die before the Master returned, as many thought and hoped, to establish the kingdom in power and glory. It was this interpretation of what Jesus said that had much to do with getting Simon Zelotes back into service, and keeping him at work.
