--- a/tex/p125.tex
+++ b/tex/p125.tex
@@ -57,10 +57,10 @@
 \vs p125 6:3 At the afternoon conference they had hardly begun to answer his question relating to the purpose of prayer when the leader invited the lad to come forward and, sitting beside him, bade him state his own views regarding prayer and worship.
 \vs p125 6:4 \pc The evening before, Jesus’ parents had heard about this strange youth who so deftly sparred with the expounders of the law, but it had not occurred to them that this lad was their son. They had about decided to journey out to the home of Zacharias as they thought Jesus might have gone thither to see Elizabeth and John. Thinking Zacharias might perhaps be at the temple, they stopped there on their way to the City of Judah. As they strolled through the courts of the temple, imagine their surprise and amazement when they recognized the voice of the missing lad and beheld him seated among the temple teachers.
 \vs p125 6:5 Joseph was speechless, but Mary gave vent to her long\hyp{}pent\hyp{}up fear and anxiety when, rushing up to the lad, now standing to greet his astonished parents, she said: “My child, why have you treated us like this? It is now more than three days that your father and I have searched for you sorrowing. Whatever possessed you to desert us?” It was a tense moment. All eyes were turned on Jesus to hear what he would say. His father looked reprovingly at him but said nothing.
-\vs p125 6:6 \pc It should be remembered that Jesus was supposed to be a young man. He had finished the regular schooling of a child, had been recognized as a son of the law\fnst{\textbf{son of the law}, \textheb{מצוה בר} bar mitzvah, a better English wording would have been ``son of the commandment'', but we left the original intact. See also \bibref[123:5.2]{p123 5:2}}, and had received consecration as a citizen of Israel. And yet his mother more than mildly upbraided him before all the people assembled, right in the midst of the most serious and sublime effort of his young life, thus bringing to an inglorious termination one of the greatest opportunities ever to be granted him to function as a teacher of truth, a preacher of righteousness, a revealer of the loving character of his Father in heaven.
+\vs p125 6:6 \pc It should be remembered that Jesus was supposed to be a young man. He had finished the regular schooling of a child, had been recognized as a son of the law\fnst{\textbf{son of the law}, \textheb{מצוה בר} bar mitzvah, a better English wording would have been ``son of the commandment'', but we left the original intact. See also \bibref[123:5.2]{p123 5:2}.}, and had received consecration as a citizen of Israel. And yet his mother more than mildly upbraided him before all the people assembled, right in the midst of the most serious and sublime effort of his young life, thus bringing to an inglorious termination one of the greatest opportunities ever to be granted him to function as a teacher of truth, a preacher of righteousness, a revealer of the loving character of his Father in heaven.
 \vs p125 6:7 But the lad was equal to the occasion. When you take into fair consideration all the factors which combined to make up this situation, you will be better prepared to fathom the wisdom of the boy’s reply to his mother’s unintended rebuke. After a moment’s thought, Jesus answered his mother, saying: \textcolour{ubdarkred}{“Why is it that you have so long sought me? Would you not expect to find me in my Father’s house since the time has come when I should be about my Father’s business?”}
 \vs p125 6:8 Everyone was astonished at the lad’s manner of speaking. Silently they all withdrew and left him standing alone with his parents. Presently the young man relieved the embarrassment of all three when he quietly said: \textcolour{ubdarkred}{“Come, my parents, none has done aught but that which he thought best. Our Father in heaven has ordained these things; let us depart for home.”}
-\vs p125 6:9 In silence they started out, arriving at Jericho for the night. Only once did they pause, and that on the brow of Olivet, when the lad raised his staff aloft and, quivering from head to foot under the surging of intense emotion, said: \textcolour{ubdarkred}{“O Jerusalem, Jerusalem, and the people thereof, what slaves you are --- subservient to the Roman yoke and victims of your own traditions --- but I will return to cleanse yonder temple and deliver my people from this bondage!”}\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Jerusalem-Jerusalem.png}\caption{O Jerusalem, Jerusalem by Jeremy~Winborg}\end{figure}}
+\vs p125 6:9 In silence they started out, arriving at Jericho for the night. Only once did they pause, and that on the brow of Olivet, when the lad raised his staff aloft and, quivering from head to foot under the surging of intense emotion, said: \textcolour{ubdarkred}{“O Jerusalem, Jerusalem, and the people thereof, what slaves you are --- subservient to the Roman yoke and victims of your own traditions --- but I will return to cleanse yonder temple and deliver my people from this bondage!”}\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=0.85\columnwidth]{images/Jerusalem-Jerusalem.png}\caption{O Jerusalem, Jerusalem by Jeremy Winborg}\end{figure}}
 \vs p125 6:10 On the three days’ journey to Nazareth Jesus said little; neither did his parents say much in his presence. They were truly at a loss to understand the conduct of their first\hyp{}born son, but they did treasure in their hearts his sayings, even though they could not fully comprehend their meanings.
 \vs p125 6:11 Upon reaching home, Jesus made a brief statement to his parents, assuring them of his affection and implying that they need not fear he would again give any occasion for their suffering anxiety because of his conduct. He concluded this momentous statement by saying: \textcolour{ubdarkred}{“While I must do the will of my Father in heaven, I will also be obedient to my father on earth. I will await my hour.”}
 \vs p125 6:12 \pc Though Jesus, in his mind, would many times refuse to \bibemph{consent} to the well\hyp{}intentioned but misguided efforts of his parents to dictate the course of his thinking or to establish the plan of his work on earth, still, in every manner consistent with his dedication to the doing of his Paradise Father’s will, he did most gracefully \bibemph{conform} to the desires of his earthly father and to the usages of his family in the flesh. Even when he could not consent, he would do everything possible to conform. He was an artist in the matter of adjusting his dedication to duty to his obligations of family loyalty and social service.
