--- a/tex/p182.tex
+++ b/tex/p182.tex
@@ -7,7 +7,7 @@
 \vs p182 0:2 As Jesus and the 11 made their way back to camp, the apostles began to wonder about the meaning of Judas’s prolonged absence, and they spoke to one another concerning the Master’s prediction that one of them would betray him, and for the first time they suspected that all was not well with Judas Iscariot. But they did not engage in open comment about Judas until they reached the camp and observed that he was not there, waiting to receive them. When they all besieged Andrew to know what had become of Judas, their chief remarked only, “I do not know where Judas is, but I fear he has deserted us.”
 \usection{The Last Group Prayer}
 \vs p182 1:1 A few moments after arriving at camp, Jesus said to them: \textcolour{ubdarkred}{“My friends and brethren, my time with you is now very short, and I desire that we draw apart by ourselves while we pray to our Father in heaven for strength to sustain us in this hour and henceforth in all the work we must do in his name.”}
-\vs p182 1:2 When Jesus had thus spoken, he led the way a short distance up on Olivet, and in full view of Jerusalem he bade them kneel on a large flat rock in a circle about him as they had done on the day of their ordination; and then, as he stood there in the midst of them glorified in the mellow moonlight, he lifted up his eyes toward heaven and prayed:\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/He-Lifted-His-Eyes-toward-Heaven.jpg}\caption{He Lifted His Eyes toward Heaven by Michael~Dudash}\end{figure}}
+\vs p182 1:2 When Jesus had thus spoken, he led the way a short distance up on Olivet, and in full view of Jerusalem he bade them kneel on a large flat rock in a circle about him as they had done on the day of their ordination; and then, as he stood there in the midst of them glorified in the mellow moonlight, he lifted up his eyes toward heaven and prayed:\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\tunemarkup{pgkoboaurahd}{0.85}\columnwidth]{images/He-Lifted-His-Eyes-toward-Heaven.jpg}\caption{He Lifted His Eyes toward Heaven by Michael Dudash}\end{figure}}
 \vs p182 1:3 \textcolour{ubdarkred}{“Father, my hour has come; now glorify your Son that the Son may glorify you. I know that you have given me full authority over all living creatures in my realm, and I will give eternal life to all who will become faith sons of God. And this is eternal life, that my creatures should know you as the only true God and Father of all, and that they should believe in him whom you sent into the world. Father, I have exalted you on earth and have accomplished the work which you gave me to do. I have almost finished my bestowal upon the children of our own creation; there remains only for me to lay down my life in the flesh. And now, O my Father, glorify me with the glory which I had with you before this world was and receive me once more at your right hand.}
 \vs p182 1:4 \textcolour{ubdarkred}{“I have manifested you to the men whom you chose from the world and gave to me. They are yours --- as all life is in your hands --- you gave them to me, and I have lived among them, teaching them the way of life, and they have believed. These men are learning that all I have comes from you, and that the life I live in the flesh is to make known my Father to the worlds. The truth which you have given to me I have revealed to them. These, my friends and ambassadors, have sincerely willed to receive your word. I have told them that I came forth from you, that you sent me into this world, and that I am about to return to you. Father, I do pray for these chosen men. And I pray for them not as I would pray for the world, but as for those whom I have chosen out of the world to represent me to the world after I have returned to your work, even as I have represented you in this world during my sojourn in the flesh. These men are mine; you gave them to me; but all things which are mine are ever yours, and all that which was yours you have now caused to be mine. You have been exalted in me, and I now pray that I may be honoured in these men. I can no longer be in this world; I am about to return to the work you have given me to do. I must leave these men behind to represent us and our kingdom among men. Father, keep these men faithful as I prepare to yield up my life in the flesh. Help these, my friends, to be one in spirit, even as we are one. As long as I could be with them, I could watch over them and guide them, but now am I about to go away. Be near them, Father, until we can send the new teacher to comfort and strengthen them.}
 \vs p182 1:5 \textcolour{ubdarkred}{“You gave me twelve men, and I have kept them all save one, the son of revenge, who would not have further fellowship with us. These men are weak and frail, but I know we can trust them; I have proved them; they love me, even as they reverence you. While they must suffer much for my sake, I desire that they should also be filled with the joy of the assurance of sonship in the heavenly kingdom. I have given these men your word and have taught them the truth. The world may hate them, even as it has hated me, but I do not ask that you take them out of the world, only that you keep them from the evil in the world. Sanctify them in the truth; your word is truth. And as you sent me into this world, even so am I about to send these men into the world. For their sakes I have lived among men and have consecrated my life to your service that I might inspire them to be purified through the truth I have taught them and the love I have revealed to them. I well know, my Father, that there is no need for me to ask you to watch over these brethren after I have gone; I know you love them even as I, but I do this that they may the better realize the Father loves mortal men even as does the Son.}
@@ -51,7 +51,7 @@
 \vs p182 3:2 The Master remained in a prayerful attitude for a few moments, and then, going over to the three apostles, he found them sound asleep, for their eyes were heavy and they could not remain awake. As Jesus awoke them, he said: \textcolour{ubdarkred}{“What! can you not watch with me even for one hour? Cannot you see that my soul is exceedingly sorrowful, even to death, and that I crave your companionship?”} After the three had aroused from their slumber, the Master again went apart by himself and, falling down on the ground, again prayed: \textcolour{ubdarkred}{“Father, I know it is possible to avoid this cup --- all things are possible with you --- but I have come to do your will, and while this is a bitter cup, I would drink it if it is your will.”} And when he had thus prayed, a mighty angel came down by his side and, speaking to him, touched him and strengthened him.
 \vs p182 3:3 When Jesus returned to speak with the three apostles, he again found them fast asleep. He awakened them, saying: \textcolour{ubdarkred}{“In such an hour I need that you should watch and pray with me --- all the more do you need to pray that you enter not into temptation --- wherefore do you fall asleep when I leave you?”}
 \vs p182 3:4 And then, for a third time, the Master withdrew and prayed: \textcolour{ubdarkred}{“Father, you see my sleeping apostles; have mercy upon them. The spirit is indeed willing, but the flesh is weak. And now, O Father, if this cup may not pass, then would I drink it. Not my will, but yours, be done.”} And when he had finished praying, he lay for a moment prostrate on the ground. When he arose and went back to his apostles, once more he found them asleep. He surveyed them and, with a pitying gesture, tenderly said: \textcolour{ubdarkred}{“Sleep on now and take your rest; the time of decision is past. The hour is now upon us wherein the Son of Man will be betrayed into the hands of his enemies.”} As he reached down to shake them that he might awaken them, he said: \textcolour{ubdarkred}{“Arise, let us be going back to the camp, for, behold, he who betrays me is at hand, and the hour has come when my flock shall be scattered. But I have already told you about these things.”}
-\vs p182 3:5 \pc During the years that Jesus lived among his followers, they did, indeed, have much proof of his divine nature, but just now are they about to witness new evidences of his humanity. Just before the greatest of all the revelations of his divinity, his resurrection, must now come the greatest proofs of his mortal nature, his humiliation and crucifixion.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Gethsemane-Prayer.png}\caption{Gethsemane Prayer by Yongsung~Kim}\end{figure}}
+\vs p182 3:5 \pc During the years that Jesus lived among his followers, they did, indeed, have much proof of his divine nature, but just now are they about to witness new evidences of his humanity. Just before the greatest of all the revelations of his divinity, his resurrection, must now come the greatest proofs of his mortal nature, his humiliation and crucifixion.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Gethsemane-Prayer.png}\caption{Gethsemane Prayer by Yongsung Kim}\end{figure}}
 \vs p182 3:6 Each time he prayed in the garden, his humanity laid a firmer faith\hyp{}hold upon his divinity; his human will more completely became one with the divine will of his Father. Among other words spoken to him by the mighty angel was the message that the Father desired his Son to finish his earth bestowal by passing through the creature experience of death just as all mortal creatures must experience material dissolution in passing from the existence of time into the progression of eternity.
 \vs p182 3:7 Earlier in the evening it had not seemed so difficult to drink the cup, but as the human Jesus bade farewell to his apostles and sent them to their rest, the trial grew more appalling. Jesus experienced that natural ebb and flow of feeling which is common to all human experience, and just now he was weary from work, exhausted from the long hours of strenuous labour and painful anxiety concerning the safety of his apostles. While no mortal can presume to understand the thoughts and feelings of the incarnate Son of God at such a time as this, we know that he endured great anguish and suffered untold sorrow, for the perspiration rolled off his face in great drops. He was at last convinced that the Father intended to allow natural events to take their course; he was fully determined to employ none of his sovereign power as the supreme head of a universe to save himself.
 \vs p182 3:8 The assembled hosts of a vast creation are now hovered over this scene under the transient joint command of Gabriel and the Personalized Adjuster of Jesus. The division commanders of these armies of heaven have repeatedly been warned not to interfere with these transactions on earth unless Jesus himself should order them to intervene.
