--- a/tex/p183.tex
+++ b/tex/p183.tex
@@ -21,7 +21,7 @@
 \usection{The Master’s Arrest}
 \vs p183 3:1 As this company of armed soldiers and guards, carrying torches and lanterns, approached the garden, Judas stepped well out in front of the band that he might be ready quickly to identify Jesus so that the apprehenders could easily lay hands on him before his associates could rally to his defence. And there was yet another reason why Judas chose to be ahead of the Master’s enemies: He thought it would appear that he had arrived on the scene ahead of the soldiers so that the apostles and others gathered about Jesus might not directly connect him with the armed guards following so closely upon his heels. Judas had even thought to pose as having hastened out to warn them of the coming of the apprehenders, but this plan was thwarted by Jesus’ blighting greeting of the betrayer. Though the Master spoke to Judas kindly, he greeted him as a traitor.
 \vs p183 3:2 As soon as Peter, James, and John, with some 30 of their fellow campers, saw the armed band with torches swing around the brow of the hill, they knew that these soldiers were coming to arrest Jesus, and they all rushed down to near the olive press where the Master was sitting in moonlit solitude. As the company of soldiers approached on one side, the three apostles and their associates approached on the other. As Judas strode forward to accost the Master, there the two groups stood, motionless, with the Master between them and Judas making ready to impress the traitorous kiss upon his brow.
-\vs p183 3:3 It had been the hope of the betrayer that he could, after leading the guards to Gethsemane, simply point Jesus out to the soldiers, or at most carry out the promise to greet him with a kiss, and then quickly retire from the scene. Judas greatly feared that the apostles would all be present, and that they would concentrate their attack upon him in retribution for his daring to betray their beloved teacher. But when the Master greeted him as a betrayer, he was so confused that he made no attempt to flee.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/I-am-He.png}\caption{I am He by Walter~Rane}\end{figure}}
+\vs p183 3:3 It had been the hope of the betrayer that he could, after leading the guards to Gethsemane, simply point Jesus out to the soldiers, or at most carry out the promise to greet him with a kiss, and then quickly retire from the scene. Judas greatly feared that the apostles would all be present, and that they would concentrate their attack upon him in retribution for his daring to betray their beloved teacher. But when the Master greeted him as a betrayer, he was so confused that he made no attempt to flee.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/I-am-He.png}\caption{I am He by Walter Rane}\end{figure}}
 \vs p183 3:4 Jesus made one last effort to save Judas from actually betraying him in that, before the traitor could reach him, he stepped to one side and, addressing the foremost soldier on the left, the captain of the Romans, said, \textcolour{ubdarkred}{“Whom do you seek?”} The captain answered, “Jesus of Nazareth.” Then Jesus stepped up immediately in front of the officer and, standing there in the calm majesty of the God of all this creation, said, \textcolour{ubdarkred}{“I am he.”} Many of this armed band had heard Jesus teach in the temple, others had learned about his mighty works, and when they heard him thus boldly announce his identity, those in the front ranks fell suddenly backward. They were overcome with surprise at his calm and majestic announcement of identity. There was, therefore, no need for Judas to go on with his plan of betrayal. The Master had boldly revealed himself to his enemies, and they could have taken him without Judas’s assistance. But the traitor had to do something to account for his presence with this armed band, and besides, he wanted to make a show of carrying out his part of the betrayal bargain with the rulers of the Jews in order to be eligible for the great reward and honours which he believed would be heaped upon him in compensation for his promise to deliver Jesus into their hands.
 \vs p183 3:5 As the guards rallied from their first faltering at the sight of Jesus and at the sound of his unusual voice, and as the apostles and disciples drew nearer, Judas stepped up to Jesus and, placing a kiss upon his brow, said, “Hail, Master and Teacher.” And as Judas thus embraced his Master, Jesus said, \textcolour{ubdarkred}{“Friend, is it not enough to do this! Would you even betray the Son of Man with a kiss?”}
 \vs p183 3:6 The apostles and disciples were literally stunned by what they saw. For a moment no one moved. Then Jesus, disengaging himself from the traitorous embrace of Judas, stepped up to the guards and soldiers and again asked, \textcolour{ubdarkred}{“Whom do you seek?”} And again the captain said, “Jesus of Nazareth.” And again answered Jesus: \textcolour{ubdarkred}{“I have told you that I am he. If, therefore, you seek me, let these others go their way. I am ready to go with you.”}
